Adding back button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container">
+        <h1 class="header">The list of users</h1>
         <table id="users">
           <tr>
             <th>Name</th>
