--- a/post.html
+++ b/post.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container" id="posts">
+    <a href="/index.html" class="back">Back</a>
     </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="posts.js"></script>
